2003-03-03  Till Kamppeter <till.kamppeter@gmx.net>

	* printer/312297.xml, printer/Epson-EPL-5800L.xml,
	  printer/Epson-EPL-5900L.xml, driver/epl5?00l.xml,
	  opt/epsonepl-*.xml: Added drivers "elp5700l", "elp5800l", and
	  "elp5700l" for Epson laser winprinters, raised ratings of the
	  Epson EPL-5700L, EPL-5800L, and EPL-5900L from "Partially" to
	  "Mostly" or "Perfectly".

2003-03-01  Till Kamppeter <till.kamppeter@gmx.net>

	* printer/HP-OfficeJet_5110.xml, printer/HP-OfficeJet_5110xi.xml:
	  Added new HP OfficeJet 5100 series.

	* printer/HP-PhotoSmart_P100.xml, printer/131424.xml,
	  printer/259689.xml, printer/HP-PhotoSmart_P1218.xml,
	  printer/HP-PhotoSmart_P1115.xml,
	  printer/HP-PhotoSmart_P1315.xml, printer/HP-PhotoSmart_7150.xml,
	  printer/HP-PhotoSmart_7350.xml, printer/HP-PhotoSmart_7550.xml,
	  printer/HP-DeskJet_450.xml: Added auto-detection information
	  from http://hpoj.sourceforge.net/doc/device_id_strings.txt.

2003-02-26  Till Kamppeter <till.kamppeter@gmx.net>

	* opt/159.xml, opt/pxlmono-GSResolution.xml
	  opt/pxlmono-PrintoutMode.xml, driver/pxlmono.xml: Renamed
	  "Resolution" option for the "pxlmono"/"pxlcolor" drivers to
	  "GSResolution". Added a constant "*DefaultResolution: 1200dpi"
	  to the genmerated PPD files. This is a preliminary workaround to
	  avoid crashes of OpenOffice.org.

2003-02-26  Johannes Meixner <jsmeix@suse.de>

	* Changed
	  Kyocera KM-* models comment because all KM-* models are
	  in fact scanners (coperts?) which become a printer by an
	  additional printer board (i.e. the scanner is not "optional").

	  Modified Files:
	  Kyocera-KM-1530.xml Kyocera-KM-1810.xml Kyocera-KM-2030.xml
	  Kyocera-KM-2530.xml Kyocera-KM-3530.xml Kyocera-KM-4230.xml
	  Kyocera-KM-4530.xml Kyocera-KM-5230.xml Kyocera-KM-5530.xml
	  Kyocera-KM-6230.xml

2003-02-26  Johannes Meixner <jsmeix@suse.de>

	* Corrected
	  Kyocera entries according to the information
	  from Markus Brauer <markus.brauer@ktde.de>: