@@ -12,15 +12,28 @@
    <arg_order>130</arg_order>
    <arg_spot>C</arg_spot>
    <arg_substitution />
-   <arg_proto>&lt;&lt;%s&gt;&gt;setpagedevice\n</arg_proto>
+   <arg_proto>%s</arg_proto>
   </arg_execution>
   <constraints>
      <constraint sense="true">
       <driver>Postscript</driver>
-      <arg_defval>ev/909</arg_defval>
+      <arg_defval>ev/9095</arg_defval>
      </constraint>
   </constraints>
   <enum_vals>
+   <enum_val id="ev/9095">
+    <ev_longname>
+     <en>Not capable</en>
+    </ev_longname>
+    <!-- A multilingual <comments> block can appear here, too;
+         it should be treated as documentation for the user. -->
+    <ev_shortname>
+     <en>Notcapable</en>
+     <!-- Until someone tells me how to learn the user locale in 
+          backends, the shortname must be monolingual in <en>! -->
+    </ev_shortname>
+    <ev_driverval></ev_driverval>
+   </enum_val>
    <enum_val id="ev/909">
     <ev_longname>
      <en>Off</en>
@@ -32,7 +45,7 @@
      <!-- Until someone tells me how to learn the user locale in 
           backends, the shortname must be monolingual in <en>! -->
     </ev_shortname>
-    <ev_driverval>/Duplex false</ev_driverval>
+    <ev_driverval>&lt;&lt;/Duplex false&gt;&gt;setpagedevice\n</ev_driverval>
    </enum_val>
    <enum_val id="ev/910">
     <ev_longname>
@@ -45,7 +58,7 @@
      <!-- Until someone tells me how to learn the user locale in 
           backends, the shortname must be monolingual in <en>! -->
     </ev_shortname>
-    <ev_driverval>/Duplex true /Tumble false</ev_driverval>
+    <ev_driverval>&lt;&lt;/Duplex true /Tumble false&gt;&gt;setpagedevice\n</ev_driverval>
    </enum_val>
    <enum_val id="ev/911">
     <ev_longname>
@@ -58,7 +71,7 @@
      <!-- Until someone tells me how to learn the user locale in 
           backends, the shortname must be monolingual in <en>! -->
     </ev_shortname>
-    <ev_driverval>/Duplex true /Tumble true</ev_driverval>
+    <ev_driverval>&lt;&lt;/Duplex true /Tumble true&gt;&gt;setpagedevice\n</ev_driverval>
    </enum_val>
   </enum_vals>
 </option>
