@@ -1,3 +1,9 @@
+2003-03-05  Tim Waugh <twaugh@redhat.com>
+
+	* opt/162.xml: New option 'Not capable' for printers that balk at
+	  '/Duplex false'
+	  (https://bugzilla.redhat.com/bugzilla/show_bug.cgi?id=82385).
+
 2003-03-03  Till Kamppeter <till.kamppeter@gmx.net>
 
 	* printer/312297.xml, printer/Epson-EPL-5800L.xml,
